# Reversi_Iced

./: .gitignore  Cargo.toml  README.md
src/: circles.rs  lib.rs  main.rs  test.rs
